--- a/SortingViewer/SortingViewer.vcxproj.filters
+++ b/SortingViewer/SortingViewer.vcxproj.filters
@@ -200,6 +200,15 @@
     <FxCompile Include="SkyBoxPixelShader.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
+    <FxCompile Include="DepthOnlyVertexShader.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="DepthOnlyPixelShader.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="BackBufferComputeShader.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Header.hlsli">
